chore: jjwt 0.12.0 -> 0.12.6 변경 - 테스트 시 sun.security.util.KeyUtil 클래스를 리플렉션 접근 문제 해결